# ChangeLog for perl-core/Filter
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Filter/ChangeLog,v 1.23 2009/03/13 20:48:35 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Filter-1.30.ebuild,
  -Filter-1.32.ebuild, -Filter-1.34.ebuild:
  Cleanup

*Filter-1.36 (01 Mar 2009)

  01 Mar 2009; Torsten Veller <tove@gentoo.org> +Filter-1.36.ebuild:
  Version bump

*Filter-1.34 (02 Aug 2008)

  02 Aug 2008; Torsten Veller <tove@gentoo.org> +Filter-1.34.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Filter-1.33.ebuild:
  Stable for HPPA too.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Filter-1.33.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> Filter-1.33.ebuild:
  Stable on ppc.

  27 Jul 2007; Raúl Porcel <armin76@gentoo.org> Filter-1.33.ebuild:
  alpha/ia64/x86 stable

  10 Jul 2007; Michael Cummings <mcummings@gentoo.org> Filter-1.33.ebuild:
  Marking sparc stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> Filter-1.32.ebuild:
  Stable on mips.

*Filter-1.33 (11 Mar 2007)

  11 Mar 2007; Michael Cummings <mcummings@gentoo.org> +Filter-1.33.ebuild:
  Version bump

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> Filter-1.32.ebuild:
  Stable on x86, bug #169153.

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> Filter-1.32.ebuild:
  Stable on ppc.

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> Filter-1.32.ebuild:
  Stable on hppa

  21 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Filter-1.32.ebuild:
  Stable on Alpha + ia64.

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> -Filter-1.28.ebuild,
  -Filter-1.28-r1.ebuild, -Filter-1.29.ebuild:
  Cleaning up old ebuilds

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> Filter-1.32.ebuild:
  Marking amd64 stable

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> Filter-1.32.ebuild:
  Marking sparc stable
