@@ -1,18 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Filter/Filter-1.32.ebuild,v 1.11 2007/05/11 02:18:26 kumba Exp $
-
-inherit perl-module
-
-DESCRIPTION="Interface for creation of Perl Filters"
-HOMEPAGE="http://search.cpan.org/~pmqs/${P}.readme"
-SRC_URI="mirror://cpan/authors/id/P/PM/PMQS/${P}.tar.gz"
-
-LICENSE="|| ( Artistic GPL-2 )"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris"
-IUSE=""
-
-DEPEND="dev-lang/perl"
-
-mymake="/usr"
