@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/Filter
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Filter/ChangeLog,v 1.23 2009/03/13 20:48:35 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Filter/ChangeLog,v 1.24 2009/05/31 08:16:35 tove Exp $
+
+  31 May 2009; Torsten Veller <tove@gentoo.org> Filter-1.33.ebuild:
+  Remove mymake="/usr"
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -Filter-1.30.ebuild,
   -Filter-1.32.ebuild, -Filter-1.34.ebuild:
